Mon Feb  9 20:04:35 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_int): return 1/0 on success/failure.
	  (inspect_uint): ditto.
	  (inspect_linger): ditto.
	  (inspect_socktype): ditto.
	  (inspect_timeval): ditto.
	  (inspect_peercred): ditto.
	  (inspect_local_peercred): ditto.
	  (sockopt_inspect): refactored.

Mon Feb  9 20:00:26 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: more constants for Solaris.

Mon Feb  9 19:59:18 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/basicsocket.c (bsock_getsockopt): refine address family
	  examination.

Mon Feb  9 19:52:32 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (sockopt_initialize): argument conversion
	  reordered.

Mon Feb  9 19:46:22 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ancillary_initialize): add family argument.
	  (ancdata_new): ditto.
	  (ancillary_s_int): ditto.
	  (ancillary_family): new function.
	  (ancillary_family_m): new method.
	  (ancillary_s_ip_pktinfo): follow ancdata_new change.
	  (ancillary_s_ipv6_pktinfo): ditto.
	  (bsock_recvmsg_internal): examine the socket address family.

Mon Feb  9 11:31:09 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (io_encoding_set): ignore second argument when external and
	  internal are same. [ruby-dev:37939]

Mon Feb  9 09:05:12 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_local_peercred): check version.
	  (sockopt_inspect): suppress warning.

Mon Feb  9 02:04:03 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_peercred): struct ucred contains
	  effective uid/gid.

Mon Feb  9 00:44:45 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (sockopt_inspect): add ifdef guard for
	  LOCAL_PEERCRED.

Mon Feb  9 00:37:06 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_local_peercred): cr_uid is a effective
	  uid, not a real uid.

Mon Feb  9 00:30:56 2009  Tanaka Akira  <akr@fsij.org>
